<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500">


    <Toolbar
        android:id="@+id/toolbarRegister"
        android:textAlignment="center"
        android:titleTextColor="@color/white"
        android:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        android:title="@string/registerScreen"
        app:layout_constraintTop_toTopOf="parent"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@color/purple_500"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progressBarRegister"
        android:indeterminate="true"
        app:layout_constraintTop_toBottomOf="@id/toolbarRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity"
        android:orientation="vertical"
        android:background="@color/purple_500"
        android:gravity="center">

        <EditText
            android:id="@+id/editNameRegister"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/inputName" />


        <EditText
            android:id="@+id/editEmailRegister"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/inputEmail" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/inputPassword" />


        <EditText
            android:id="@+id/repeatPasswordRegister"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/repeatPassword" />

        <Button
            android:id="@+id/btnRegisterScreen"
            style="@style/DefaultBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

