<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:indeterminate="true"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true" />

        <EditText
            android:id="@+id/editEmailLogin"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/inputEmail" />

        <EditText
            android:id="@+id/editPasswordLogin"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/inputPassword" />

        <Button
            android:id="@+id/btnEnter"
            style="@style/DefaultBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter" />


        <Button
            android:id="@+id/btnRegister"
            android:backgroundTint="@color/purple_500"
            android:layout_marginHorizontal="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />


    </LinearLayout>
    
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/credits" />


</RelativeLayout>