<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".EmailVerifyActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <ImageView
            android:src="@drawable/confirm_email"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/editEmail"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/txtConfirmEmail"/>

        <Button
            android:id="@+id/btnEmailConfirmed"
            style="@style/DefaultBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iAlreadyConfirmed" />

        <Button
            android:id="@+id/btnSendAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/sendAgain" />

        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/btnExit"
            android:backgroundTint="@color/purple_500"
            android:layout_marginHorizontal="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
    </LinearLayout>

</RelativeLayout>