<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profile"
                app:civ_border_width="1dp"
                app:civ_circle_background_color="@color/purple_200" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignEnd="@id/profile_image"
                android:layout_alignBottom="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_add_24"
                app:civ_border_width="1dp"
                app:civ_circle_background_color="@color/purple_200" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/txt_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_userName"
                android:layout_toStartOf="@id/editNameButton"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="André Luiz"
                android:textSize="17sp" />

            <ImageButton
                android:id="@+id/editNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:padding="6dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_edit_24" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/txt_userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inputEmail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_userEmail"
                android:layout_toStartOf="@id/editEmailButton"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="andre@gmail.com"
                android:textSize="17sp" />

            <ImageButton
                android:id="@+id/editEmailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:padding="6dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_edit_24" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/txt_userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inputPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_userPassword"
                android:layout_toStartOf="@id/editPasswordButton"
                android:ellipsize="end"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="123456"
                android:textSize="17sp" />

            <ImageButton
                android:id="@+id/editPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:padding="6dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_edit_24" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnLogout"
            style="@style/DefaultBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logOut" />

        <Button
            android:id="@+id/btnExcludeAccount"
            android:backgroundTint="@color/purple_500"
            android:layout_marginHorizontal="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/excludeAccount" />

    </LinearLayout>

</ScrollView>